FrameWork/force-app/main/default/objects/TriggerHandlerConfig__mdt/fields/Contecst__c.field-meta.xml
<CustomField>
    <fullName>Contecst__c</fullName>
    <label>Context</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Before</fullName>
                <default>true</default>
                <label>Before</label>
            </value>
            <value>
                <fullName>After</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>